[gd_scene load_steps=3 format=3 uid="uid://dt3qairsak0yh"]

[ext_resource type="Script" path="res://Scripts/register.gd" id="1_3rd7o"]
[ext_resource type="Theme" uid="uid://dvmgjyprf2q1u" path="res://Fonts/label_font.tres" id="2_sq3kg"]

[node name="Register" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_3rd7o")

[node name="ErrorLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="UsernameInput" type="LineEdit" parent="."]
offset_left = 620.0
offset_top = 280.0
offset_right = 1120.0
offset_bottom = 355.0
theme = ExtResource("2_sq3kg")
placeholder_text = "Username"
alignment = 1

[node name="EmailInput" type="LineEdit" parent="."]
offset_left = 620.0
offset_top = 380.0
offset_right = 1120.0
offset_bottom = 455.0
theme = ExtResource("2_sq3kg")
placeholder_text = "Email"
alignment = 1

[node name="PasswordInput" type="LineEdit" parent="."]
offset_left = 620.0
offset_top = 480.0
offset_right = 1120.0
offset_bottom = 555.0
theme = ExtResource("2_sq3kg")
placeholder_text = "Password"
alignment = 1
secret = true

[node name="ConfirmPasswordInput" type="LineEdit" parent="."]
offset_left = 620.0
offset_top = 580.0
offset_right = 1120.0
offset_bottom = 655.0
theme = ExtResource("2_sq3kg")
placeholder_text = "Confirm password"
alignment = 1
secret = true

[node name="RegisterButton" type="Button" parent="."]
offset_left = 745.0
offset_top = 720.0
offset_right = 995.0
offset_bottom = 795.0
theme = ExtResource("2_sq3kg")
text = "Register"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_right = 229.0
offset_bottom = 66.0
theme = ExtResource("2_sq3kg")
text = "< Back to Login"
